--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,3 +1,4 @@
+@import "../styles/colors.scss";
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -242,7 +243,7 @@ html {
 }
 
 body {
-  color: hsla(0, 0%, 0%, 0.8);
+  color: $darker-blue;
   font-family: georgia, serif;
   font-weight: normal;
   word-wrap: break-word;
@@ -254,7 +255,7 @@ body {
 }
 
 img {
-  max-width: 100%;
+  /*max-width: 100%;*/
   margin-left: 0;
   margin-right: 0;
   margin-top: 0;
