--- a/src/components/common/link/link.module.scss
+++ b/src/components/common/link/link.module.scss
@@ -1,6 +1,6 @@
 @import '../../../styles/colors';
 .link {
-  padding: .5rem;
+  padding: 12px 30px;
   background-color: #207ce5;
   border-radius: .2rem;
   display: inline-block;
