--- a/src/components/logo/logo.module.scss
+++ b/src/components/logo/logo.module.scss
@@ -1,5 +1,7 @@
 @import '../../styles/spacing';
 .logo {
   display: inline-block;
-  margin: auto $page-margin-h;
+  @include getHorizontalMargin();
+  margin-left: auto;
+  margin-right: auto;
 }
