--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -7,7 +7,7 @@ html {
 
 body {
   margin: 0;
-  background-color: transparent;
+  background-color: $light-grey;
 }
 
 article,
@@ -385,18 +385,7 @@ hgroup {
   margin-bottom: 1.45rem;
 }
 
-ul {
-  margin-left: 1.45rem;
-  margin-right: 0;
-  margin-top: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0;
-  margin-bottom: 1.45rem;
-  list-style-position: outside;
-  list-style-image: none;
-}
+
 
 ol {
   margin-left: 1.45rem;
@@ -602,11 +591,7 @@ li > ol {
   margin-top: calc(1.45rem / 2);
 }
 
-li > ul {
-  margin-left: 1.45rem;
-  margin-bottom: calc(1.45rem / 2);
-  margin-top: calc(1.45rem / 2);
-}
+
 
 blockquote *:last-child {
   margin-bottom: 0;
