--- a/src/components/common/link/link.module.scss
+++ b/src/components/common/link/link.module.scss
@@ -8,6 +8,7 @@
   font-size: .9rem;
   font-family: sans-serif;
   cursor: pointer;
+  text-decoration: none;
 }
 .secondaryLink {
   @extend .link;
