--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,9 +1,10 @@
 @import '../../styles/spacing';
 .header {
-  padding: 1rem 0;
+  padding: 15px 0;
   border-bottom: 1px solid rgba(255,255,255,0.2);
   text-align: left;
 }
 .headerContent {
+  display: flex;
   @include getHorizontalMargin();
 }
