--- a/src/components/nav/nav.module.scss
+++ b/src/components/nav/nav.module.scss
@@ -1,12 +1,41 @@
+@import "../../styles/variables";
+
 .nav {
-  color: #ffffff;
-  display: inline-block;
+  color: rgba(255,255,255, 0.85);
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: calc(100% - 150px);
+  @media (min-width: $large) {
+    width: 70%;
+    max-width: 400px;
+  }
   ul {
+    display: none;
+    width: 100%;
+    justify-content: space-around;
     margin: 0;
+    line-height: 1;
+    font-family: 'Abel', sans-serif;
+    font-size: 16px;
+    @media (min-width: $large) {
+      display: flex;
+    }
   }
   li {
+    cursor: pointer;
     list-style: none;
     display: inline-block;
     margin: 0;
+    padding: 5px;
+    &:hover {
+      color: #ffffff;
+    }
+  }
+}
+.closeIcon {
+  display: flex;
+  @media (min-width: $large) {
+    display: none;
   }
 }
