--- a/src/components/nav/nav.module.scss
+++ b/src/components/nav/nav.module.scss
@@ -12,14 +12,26 @@
   }
   ul {
     display: none;
-    width: 100%;
-    justify-content: space-around;
+    height: 100vh;
+    position: absolute;
+    left: 50%;
+    top: 0;
+    justify-content: space-evenly;
+    align-items: center;
     margin: 0;
     line-height: 1;
     font-family: 'Abel', sans-serif;
     font-size: 16px;
+    flex-direction: column;
     @media (min-width: $large) {
+      height: auto;
       display: flex;
+      position: static;
+      left: auto;
+      right: auto;
+      flex-direction: row;
+      width: 100%;
+      justify-content: space-around;
     }
   }
   li {
@@ -30,6 +42,10 @@
     padding: 5px;
     &:hover {
       color: #ffffff;
+    }
+    a {
+      color: inherit;
+      text-decoration: none;
     }
   }
 }
