--- a/src/components/nav/nav.module.scss
+++ b/src/components/nav/nav.module.scss
@@ -5,10 +5,11 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  width: calc(100% - 150px);
+  margin-right: 10px;
   @media (min-width: $large) {
     width: 70%;
     max-width: 400px;
+    margin-right: auto;
   }
   ul {
     display: none;
