--- a/src/components/subscription/subscription.module.scss
+++ b/src/components/subscription/subscription.module.scss
@@ -8,7 +8,7 @@
   flex-direction: column;
   justify-content: space-between;
   width: 400px;
-  background-color: $darker-blue;
+  background-color: #2186F2;
   position: fixed;
   bottom: 0;
   right: 0;
