--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -5,6 +5,7 @@
   padding: 15px 0;
   border-bottom: 1px solid rgba(255,255,255,0.2);
   text-align: left;
+  background-color: #0e2f4e;
 }
 .headerContent {
   display: flex;
