--- a/src/components/common/link/link.module.scss
+++ b/src/components/common/link/link.module.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/colors';
 .link {
   padding: 12px 30px;
-  background-color: #207ce5;
+  background-color: $light-blue;
   border-radius: .2rem;
   display: inline-block;
   color: #ffffff;
