--- a/src/components/banners/arrows.module.scss
+++ b/src/components/banners/arrows.module.scss
@@ -1,9 +1,14 @@
 .arrows {
-  
   position: absolute;
-  top: 61px;
+  top: 20px;
   width: 100%;
   height: 500px;
   z-index: -1;
-  clip-path: polygon(0 0, 100% 0, 100% 200px, 0 800px);
+}
+.mask {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: -1;
+  clip-path: polygon(0 0, 100% 0, 100% 200px, 0 900px);
 }
