--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,11 +1,12 @@
 @import '../../styles/spacing';
 @import '../../styles/variables';
+@import '../../styles/colors';
 .header {
   transition: 300ms;
   padding: 15px 0;
   border-bottom: 1px solid rgba(255,255,255,0.2);
   text-align: left;
-  background-color: #0e2f4e;
+  background-color: $darker-blue;
 }
 .headerContent {
   display: flex;
