--- a/src/components/nav/nav.module.scss
+++ b/src/components/nav/nav.module.scss
@@ -8,7 +8,6 @@
   margin-right: 10px;
   @media (min-width: $large) {
     width: 70%;
-    max-width: 400px;
     margin-right: auto;
   }
   ul {
@@ -26,6 +25,7 @@
     font-size: 18px;
     flex-direction: column;
     @media (min-width: $large) {
+      max-width: 400px;
       height: auto;
       display: flex;
       position: static;
@@ -33,7 +33,7 @@
       right: auto;
       flex-direction: row;
       width: 100%;
-      justify-content: space-around;
+      justify-content: space-between;
     }
   }
   li {
