--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,3 +1,5 @@
+@import './colors';
+
 .c-card-corner {
   min-height: 100%;
   width: 100%;
@@ -21,4 +23,7 @@
   margin: 0 auto;
   width: 300px;
   padding: 2rem;
+}
+body {
+  background-color: $light-grey;
 }
