--- a/src/components/services-summary/services-summary.module.scss
+++ b/src/components/services-summary/services-summary.module.scss
@@ -9,10 +9,16 @@
   max-width: 1200px;
   margin: 0 auto;
   justify-content: space-around;
+  p {
+    min-height: 120px;
+  }
 
 }
 .summaryItem {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   margin-right: 40px;
   h2 {
     font-size: 18px;
